--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "normalize.css": "^8.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.7.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "3.1.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "react-scripts": "3.1.2",
     "sass-loader": "^8.0.0"
   },
   "scripts": {
