--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "4.9.0",
     "@material-ui/icons": "4.5.1",
+    "material-table": "^1.57.2",
     "node-sass": "4.12.0",
     "normalize.css": "8.0.0",
     "react": "16.9.0",
